--- a/css/styles.css
+++ b/css/styles.css
@@ -93,17 +93,17 @@ ol {
 }
 
 .drag {
-  background-image: url("../img/2.png");
+  background-image: url("../img/2.jpg");
 }
 
 .slider {
-  background-image: url("../img/3.png");
+  background-image: url("../img/3.jpg");
 }
 
 .hover {
-  background-image: url("../img/4.png");
+  background-image: url("../img/4.jpg");
 }
 
 .aim {
-  background-image: url("../img/5.png");
+  background-image: url("../img/5.jpg");
 }
